space-station/theme.module.scss
@use "landing-page";
@use "booking-page";
@use "pos-page";
@use "game-page";

@import url("https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Genos:wght@700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Chivo+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

html,
body {
  font-size: 16px;
  padding: 0;
  margin: 0;
  color: whitesmoke;
}

* {
  // NOTE: Allows scrolling to this element to work correctly
  scroll-margin: 5rem;
  box-sizing: border-box;
}

$max-content-width: 1280px;

.root {
  min-height: 100%;

  font-family: "Kanit", sans-serif;
  background: rgb(25, 20, 31);

  & > main {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: auto;
    min-height: 100vh;

    > section {
      max-width: $max-content-width;
      width: 100%;
      margin-left: auto;
      margin-right: auto;
    }
  }

  & > header {
    display: flex;
    justify-content: center;
    position: fixed;
    width: 100%;
    top: 0;
    z-index: 5;
    background: #32323252;
    backdrop-filter: blur(1px);

    nav {
      display: flex;
      position: relative;
      flex-wrap: wrap;
      text-transform: uppercase;
      letter-spacing: 0.1em;
      font-size: 0.9em;
      color: white;
      padding-left: 0 !important;
      padding-right: 0 !important;

      // NOTE: Required to center logo only after wrapping
      width: 100%;
      justify-content: center;
      overflow: hidden;
      height: 5rem;

      max-width: $max-content-width;

      > button {
        position: absolute;
        align-self: center;
        color: white !important;
        right: 0;
        // NOTE: Required for the chain of cascading overlapping that stems from range input
        z-index: 1;

        > * {
          font-size: 2em;
        }
      }

      ul li button.alt {
        font-weight: 100;
        text-transform: capitalize;
        border-radius: 0;
        padding: 1em;
        margin: 0;
      }

      ul {
        display: inline-flex;
        flex-wrap: wrap;
        list-style: none;
        margin: 0;
        padding: 0;

        // NOTE: Required to center logo only after wrapping
        margin-left: auto;
        z-index: 2;
        // background: inherit;
        height: inherit;

        li {
          display: inline-flex;
        }
      }

      a:not(.logo) {
        border-bottom: 2px solid transparent;
        transition: color 0.1s, box-shadow 0.25s;
      }

      button.alt:hover,
      a:not(.logo):hover {
        // color: #95f39e;
        // color: #99ffa0;
      }

      a.logo {
        font-family: "Genos", sans-serif;
        padding: 1rem;
        text-transform: none;
        font-size: 2.1em;
        filter: drop-shadow(0px 0px 6px #000000);
      }

      img {
        height: 1.2rem;
      }

      &.open {
        overflow: visible;
        background: inherit;

        ul {
          flex-direction: column;
          position: absolute;
          right: 0;
          top: 100%;
          height: auto;

          a {
            border-top: 0;
            border-bottom: 0;
            width: 100%;
          }

          button {
            margin: 1em;
          }
        }

        .overlay {
          display: initial;
        }
      }
    }
  }

  & > footer {
    background: rgb(25, 20, 31);
    color: grey;
    padding-top: 3em;
    padding-bottom: 3em;
    display: flex;
    align-items: center;
    justify-content: space-between;
    flex-wrap: wrap;

    nav {
      a {
        display: inline-flex;
        transition: rotate 0.1s;
        padding: 0.5em;

        img {
          width: 2em;
        }
      }

      a:hover,
      a:focus,
      a:active {
        rotate: 5deg;

        transition: rotate 0.1s;
      }
    }
  }
}

form,
fieldset {
  display: flex;
  flex-wrap: wrap;

  > button:last-child {
    margin-left: auto;
  }
}

fieldset {
  gap: 1.4em;
  position: relative;
}

.smallForm {
  max-width: 300px;
  text-align: center;

  label {
    width: 100%;

    input {
      width: 100%;
    }
  }
}

nav a {
  display: inline-flex;
  align-items: center;
  gap: 0.3em;
  color: white;
  padding: 1em;
  cursor: pointer;
}

nav button,
nav .button {
  display: inline-flex;
  justify-content: center;

  gap: 0.3em;
  margin: 1em;
  align-self: center;
}

a * {
  cursor: inherit;
}

small {
  opacity: 0.5;
  color: gray;
  font-size: 0.7em;
}

figure {
  margin: 0;
  padding: 0;
}

img {
  max-width: 100%;
}

address {
  font-style: initial;

  * {
    white-space: nowrap;
  }
}

h1,
h2,
h3,
h4,
h5,
h6,
.h1,
.h2,
.h3,
.h4,
.h5,
.h6 {
  width: 100%;

  small {
    font-size: 0.9rem;
    font-weight: normal;
    text-transform: initial;
    opacity: 0.5;
    width: 100%;
  }
}

.h1,
h1 {
  font-size: 3rem;
}

.h2,
h2 {
  font-size: 2.5rem;
}

.h3,
h3 {
  font-size: 2rem;
}

.h4,
h4 {
  font-size: 1.5rem;
}

.h5,
h5 {
  font-size: 1rem;
}

.h6,
h6 {
  font-size: 0.9rem;
}
/* ... */

